[package]
name = "poc"
version = "0.1.0"
authors = ["Vadim Suraev <vsuraev@northforgeinc.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "*"
parking_lot = "*"
log = "*"
patricia_tree = "*"

[build-dependencies]
cc = "1.0"
cbindgen = "*"

[[bin]]
name = "poc"
path = "src/main.rs"
doc = false
[lib]
name = "data_storage_api"
path = "src/lib.rs"
crate-type=["rlib", "cdylib"]
